rendered/envs/demo/gitpod/ingressroute-gitpod-1.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: gitpod-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s1.python-web.demo.budd.ee`)
      middlewares:
        - name: gitpod-1
      priority: 10
      services:
        - name: gitpod-1
          port: 3000
          scheme: http
    - kind: Rule
      match: Host(`s1.python.demo.budd.ee`)
      middlewares:
        - name: set-project
      priority: 10
      services:
        - name: gitpod-1
          port: 3000
          scheme: http
